--- a/client/package.json
+++ b/client/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "cmpalaint-appliaction",
+  "name": "client",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/index.js"
+    "lint": "eslint src/**/*.js",
+    "dev": "vite"
   },
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "googleapis": "^140.0.1"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0"
+  },
+  "dependencies": {
+    "vite": "^5.3.3"
   }
 }
