--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "googleapis": "^140.0.1"
+    "googleapis": "^140.0.1",
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
